--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "webpackConfigJaid": "nodeLib",
+  "webpackConfigJaid": "cli",
   "version": "0.1.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
   "dependencies": {
     "@babel/runtime": "^7.7.4",
+    "@octokit/rest": "^16.35.0",
+    "chalk": "^3.0.0",
+    "git-flush": "^2.0.0",
+    "globby": "^10.0.1",
+    "readable-ms": "^2.0.1",
     "simple-git": "^1.126.0"
   },
   "devDependencies": {
@@ -17,19 +22,6 @@
     "rimraf": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-config-jaid": "^5.29.1"
-  },
-  "scripts": {
-    "clean": "rimraf dist/",
-    "babel:prod": "rimraf dist/transpiled/production && NODE_ENV=production babel --out-dir dist/transpiled/production --source-maps true src",
-    "babel:dev": "rimraf dist/transpiled/development && NODE_ENV=development babel --out-dir dist/transpiled/development src",
-    "babel:test": "rimraf dist/transpiled/test && NODE_ENV=test babel --out-dir dist/transpiled/test src",
-    "build:prod": "NODE_ENV=production webpack",
-    "build:dev": "NODE_ENV=development webpack",
-    "test": "npm run build:prod && NODE_ENV=production MAIN=$(npx find-by-extension-cli js --fullPath --cwd dist/package/production) jest --runInBand",
-    "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
-    "test:dev": "npm run build:dev && NODE_ENV=test MAIN=$(npx find-by-extension-cli js --fullPath --cwd dist/package/development) jest --runInBand",
-    "test:debug": "DEBUG=\"$DEBUG,$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
-    "prepareActionJest": "npm run build:prod"
   },
   "name": "for-each-project"
 }
