--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "execa": "^4.0.0",
     "git-flush": "^2.0.3",
     "globby": "^11.0.0",
+    "got": "^10.2.2",
     "has-content": "^1.1.0",
     "readable-ms": "^2.0.1",
     "simple-git": "^1.129.0",
