--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.8.0",
     "@octokit/rest": "^16.36.0",
     "chalk": "^3.0.0",
+    "ensure-array": "^1.0.0",
     "execa": "^4.0.0",
     "git-flush": "^2.0.3",
     "globby": "^11.0.0",
